<resources>
    <string name="app_name">ZooZ</string>
    <string name="btn_link_to_register">Create an account</string>
    <string name="btn_login">Log in</string>
    <string name="hint_password">Password</string>
    <string name="menopause_fieled">Menopause</string>
    <string name="action_sign_in">Sign up</string>
    <string name="title_activity_super_admin_profile">SuperAdminProfileActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_account">My account</string>
    <string name="title_control">Clients\' list</string>
    <string name="title_periode">My period</string>
    <string name="title_add">Add Admin</string>
    <string name="hint_email">Email</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_nb_children">Number of children</string>
    <string name="sign_up_error">Inscription failed</string>
    <string name="facebook_app_id">224777011412936</string>
    <string name="log_out_btn">Log out</string>
    <string name="periode_length">Period length</string>
    <string name="periode_cycle">Cycle length</string>
    <string name="validate_periode">Validate</string>
    <string name="loading">Loding...</string>
    <string name="welcome_admin">Welcome</string>
    <string name="logout_btn">Log out</string>
    <string name="token_permission_title">Token Permission</string>
    <string name="token_permission_body">This app needs the Token permission, please accept to use this functionality.</string>
    <string name="calendar_permission_title">Calendar Permission</string>
    <string name="calendar_permission_body">This app needs the Calendar permission, please accept to use calendar functionality.</string>
    <string name="start_period_event">Period starts</string>
    <string name="end_period_event">Period ends</string>
    <string name="remove_period_event">Remove Period</string>
    <string name="wait_msg">Please wait...</string>
    <string name="invalid_field">Invalid Email</string>
    <string name="signup_valid">Validated Successfully.</string>
    <string name="verify_field">Verify the Information You Have Entered</string>
    <string name="failed_auth">Authentication failed.</string>
    <string name="required_field">Required.</string>
    <string name="title_how">Learn how</string>
    <string name="title_activity_learn_how">LearnHowActivity</string>
    <string name="first_step_desc">Step 1 Find a mirror to start</string>
    <string name="step_two_desc">Step 2 Cover your entire breast up and down</string>
    <string name="step_three_desc">Step 3 Lastly squeeze each nipple.</string>
    <string name="period_details">More details about your period</string>
    <string name="action_logout">Log out</string>
    <string name="create_event">Create a remainder</string>
    <string name="control_date">Control date</string>

</resources>
