<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="tn.rnu.fmt.zoozfmt.Client.SignUpClientActivity">

    <!-- Signup progress -->
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pink_back">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="1"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="240dp"
                android:src="@drawable/logo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/firstname_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:drawablePadding="10dp"
                android:hint="@string/hint_firstname"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="#cccccc" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastname_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_lastname"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="#cccccc" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="#cccccc" />
            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/age_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/hint_birthday"
                android:drawableLeft="@drawable/ic_today_black_24dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:inputType="date"
                android:singleLine="true"
                android:textColor="#000"
                android:clickable="true"
                android:focusable="false"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nbChildren_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/hint_nb_children"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="#cccccc" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:passwordToggleEnabled="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="#cccccc" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkMeno"
                android:text="@string/menopause_fieled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pinkButton"
                android:text="@string/action_sign_in"
                android:textColor="#ffffff" />
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/btn_login"
                android:textColor="#000" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>